--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ env:
 phases:
   pre_build:
     commands:
+      - echo "hihihi"
       - echo "1. pre build step"
       - apt-get update
       - apt-get install -y jq
