--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
   pre_build:
     commands:
       - echo "hihihi"
+      - echo "hihihi"
       - echo "1. pre build step"
       - apt-get update
       - apt-get install -y jq
